Add Discord Server widget

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>HTML Meta Tag</title>
-      <meta http-equiv = "refresh" content = "3; url = https://www.youtube.com/@UnluckyGrandPa" />
+      <title>Unlucky GrandPa Streaming Channel</title>
    </head>
    <body>
-      <p>Redirecting to YouTube Channel!</p>
+
+      <iframe src="https://discord.com/widget?id=1114968966050365570&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+   
    </body>
 </html>
