--- a/index.html
+++ b/index.html
@@ -49,29 +49,30 @@
                                 <div class="image"
                                      style="width:120px;height:120px;background-image:url(profile_picture.webp);background-size:cover;border-radius:50%;background-repeat:no-repeat;background-position:center center"></div>
                                 <div class="name-headline">
-                                    <section><h1 class="name">Engineer Lykos</h1></section>
+                                    <section><h1 class="name">Unlucky GrandPa</h1></section>
                                     <section><h2 class="headline"><span class="roles">
-                                        <span class="role">Senior Mobile Engineer</span></span>
+                                        <span class="role">Game Streamer</span></span>
                                     </h2></section>
                                 </div>
                             </div>
                             <div class="body">
                                 <div class="body-content">
                                     <section class="spotlight inset">
-                                        <button onclick='window.open("mailto:")' type="button"
+                                        <button onclick='window.open("https://www.youtube.com/@UnluckyGrandPa")' type="button"
                                                 class="button xlarge dark primary glyph-hireme"
-                                                style="background-color:#014976;border-color:#014976"><span
-                                                class="text ellipsis">Hire me</span></button>
+                                                style="background-color:#FF0000;border-color:#014976"><span
+                                                class="text ellipsis">Watch Streams</span></button>
                                     </section>
                                     <section class="bio inset">
-                                        <div><p>If you are reading this it's already great for me, because it means,
-                                            maybe, I will be in a new community.</p>
-                                            <p>Hey,.</p>
-                                            <p>I am a positive, open-minded and active person both in work and in life.
-                                                I love my job, because it is a part of my life. My life isn't limited to
-                                                the work. I also like to play different games and listen to great music
-                                                especially Symphonic rock. I will tell you about me more, when we
-                                                meet.</p></div>
+                                        <div>
+                                            <p>Welcome to the website of Unlucky GrandPa!</p>
+                                            <p>Hey, visitor.</p>
+                                            <p>We are a group of #gamers who dream of getting #Unlucky #GrandPas involved in the #gaming industry. 
+                                                Our goal is to help them earn money playing interesting and popular games. 
+                                                They will tell you #old school #funny and #interesting stories that you couldn't even dream about 😎! 
+                                                But before that, we need to scale our community, so do not hesitate to subscribe 😉!
+                                            </p>
+                                        </div>
                                     </section>
                                     <section class="meta inset">
                                         <ul class="meta-sections">
