--- a/index.html
+++ b/index.html
@@ -1,33 +1,31 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Engineer Lykos</title>
+    <title>Unlucky GrandPa</title>
     <meta name="HandheldFriendly" content="True"/>
     <meta name="MobileOptimized" content="320"/>
     <meta name="viewport" content="width=device-width, minimum-scale=1"/>
     <meta http-equiv="cleartype" content="on"/>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     <meta name="robots" content="index"/>
-    <meta name="description" content="I am a Senior Android Engineer."/>
+    <meta name="description" content="Welcome to the channel of Unlucky GrandPa!"/>
     <meta name="keywords" content="android, development, technology, programming, innovation, football, wine"/>
-    <meta name="author" content="Engineer Lykos"/>
-    <meta property="og:site_name" content="Engineer Lykos"/>
+    <meta name="author" content="Unlucky GrandPa"/>
+    <meta property="og:site_name" content="Unlucky GrandPa"/>
     <meta property="og:locale" content="en_US"/>
-    <meta property="og:url" content="https://EngineerLykos.github.io/"/>
-    <meta property="og:title" content="Engineer Lykos"/>
-    <meta property="og:description" content="I am a Senior Android Engineer."/>
-    <meta property="og:image"
-          content="https://EngineerLykos/image.webp"/>
+    <meta property="og:url" content="https://www.youtube.com/@UnluckyGrandPa"/>
+    <meta property="og:title" content="Unlucky GrandPa"/>
+    <meta property="og:description" content="Welcome to the channel of Unlucky GrandPa!"/>
+    <meta property="og:image" content="https://EngineerLykos/image.webp"/>
     <meta property="og:image:width" content="1200"/>
     <meta property="og:image:height" content="630"/>
     <meta property="og:type" content="aboutme_prod:page"/>
     <meta property="fb:app_id" content="249413078192"/>
     <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:url" content="https://EngineerLykos.github.io"/>
-    <meta name="twitter:title" content="Engineer Lykos"/>
-    <meta name="twitter:description" content="I am a Senior Android Engineer."/>
-    <meta name="twitter:image"
-          content="https://EngineerLykos.github.io/image.webp"/>
+    <meta name="twitter:url" content="https://www.youtube.com/@UnluckyGrandPa"/>
+    <meta name="twitter:title" content="Unlucky GrandPa"/>
+    <meta name="twitter:description" content="Welcome to the channel of Unlucky GrandPa!"/>
+    <meta name="twitter:image" content="https://EngineerLykos.github.io/image.webp"/>
     <meta name="twitter:image:width" content="1024"/>
     <meta name="twitter:image:height" content="512"/>
     <link rel="stylesheet" href="main.css">
