--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
                 <div class="profile-column">
                     <div class="profile small profile_view-scope-1Shwh has-nav">
                         <style>body {
-                            background-color: #014976;
+                            background-image: url(bg-ugrandpa-pure.png);
                             background: -webkit-linear-gradient(315deg, #014976 0%, #014976 30%, #027cc9 100%) fixed;
                             background: linear-gradient(135deg, #014976 0%, #014976 30%, #027cc9 100%) fixed;
                         }</style>
                         <div class="profile-content">
                             <div class="head">
                                 <div class="image"
-                                     style="width:120px;height:120px;background-image:url(profile_picture.webp);background-size:cover;border-radius:50%;background-repeat:no-repeat;background-position:center center"></div>
+                                     style="width:120px;height:120px;background-image:url(ugrandpa-profile-pic.jpg);background-size:cover;border-radius:50%;background-repeat:no-repeat;background-position:center center"></div>
                                 <div class="name-headline">
                                     <section><h1 class="name">Unlucky GrandPa</h1></section>
                                     <section><h2 class="headline"><span class="roles">
@@ -58,7 +58,7 @@
                                     <section class="spotlight inset">
                                         <button onclick='window.open("https://www.youtube.com/@UnluckyGrandPa")' type="button"
                                                 class="button xlarge dark primary glyph-hireme"
-                                                style="background-color:#FF0000;border-color:#014976"><span
+                                                style="background-color:#FF0000"><span
                                                 class="text ellipsis">Watch Streams</span></button>
                                     </section>
                                     <section class="bio inset">
