--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                         <button onclick='window.open("https://www.youtube.com/@UnluckyGrandPa")' type="button"
                                                 class="button xlarge dark primary glyph-hireme"
                                                 style="background-color:#FF0000"><span
-                                                class="text ellipsis">Watch Streams</span></button>
+                                                class="text ellipsis">Go Watch Streams</span></button>
                                     </section>
                                     <section class="bio inset">
                                         <div>
