--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                                         <div>
                                             <p>Welcome to the website of Unlucky GrandPa!</p>
                                             <p>Hey, visitor.</p>
-                                            <p>We are a group of #gamers who dream of getting #Unlucky #GrandPas involved in the #gaming industry. 
+                                            <p>We are a group of gamers who dream of getting Unlucky GrandPas involved in the gaming industry. 
                                                 Our goal is to help them earn money playing interesting and popular games. 
-                                                They will tell you #old school #funny and #interesting stories that you couldn't even dream about 😎! 
+                                                They will tell you old school funny and interesting stories that you couldn't even dream about 😎! 
                                                 But before that, we need to scale our community, so do not hesitate to subscribe 😉!
                                             </p>
                                         </div>
