--- a/index.html
+++ b/index.html
@@ -70,23 +70,8 @@
                                             </p>
                                         </div>
                                     </section>
-                                    <section class="meta inset">
-                                        <ul class="meta-sections">
-                                            <li class="meta-section jobs">
-                                                <div class="meta-header">Work</div>
-                                                <ul class="meta-list">
-                                                    <li class="meta-item">EPAM systems</li>
-                                                </ul>
-                                            </li>
-                                            <li class="meta-section schools">
-                                                <div class="meta-header">Education</div>
-                                                <ul class="meta-list">
-                                                    <li class="meta-item">Computer Science</li>
-                                                </ul>
-                                            </li>
-                                        </ul>
-                                    </section>
                                     <section class="social-links inset">
+                                        <div class="meta-header">Our media in</div>
                                         <ul class="inline">
                                             <li><a class="social-link" title="YouTube"
                                                    href="https://www.youtube.com/@UnluckyGrandPa" target="_blank"
