--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             <div class="body">
                                 <div class="body-content">
                                     <section class="spotlight inset">
-                                        <button onclick='window.open("https://www.youtube.com/@UnluckyGrandPa")' type="button"
+                                        <button onclick='window.open("https://www.youtube.com/@UnluckyGrandPa/streams")' type="button"
                                                 class="button xlarge dark primary glyph-hireme"
                                                 style="background-color:#FF0000"><span
                                                 class="text ellipsis">Go Watch Streams</span></button>
