--- a/index.html
+++ b/index.html
@@ -85,11 +85,13 @@
                                                 <p>
                                                     Our Gaming Setup Specifications:
                                                 </p>
-                                                - CPU: Intel Core i5-9400F
-                                                - RAM: 16GB
-                                                - GPU: NVIDIA RTX 3090
-                                                - Resolution: 2K with 180 FPS
-                                                - Storage: 2TB Samsung SSD
+                                                <ul>
+                                                    <li>CPU: Intel Core i5-9400F</li>
+                                                    <li>RAM: 16GB</li>
+                                                    <li>GPU: NVIDIA RTX 3090</li>
+                                                    <li>Resolution: 2K with 180 FPS</li>
+                                                    <li>Storage: 2TB Samsung SSD</li>
+                                                </ul>
                                                 
                                                 <p>
                                                     Thank you for powering up our gaming journey! 🌟
