--- a/index.html
+++ b/index.html
@@ -72,11 +72,17 @@
                                                 Donate with Crypto:
 
                                                 <p>
-                                                    Bitcoin: `1K7zZegsEFTGU1dirhwyikq1mbszveW5e9`
+                                                    <b>Bitcoin:</b>
+                                                    <p>
+                                                        `1K7zZegsEFTGU1dirhwyikq1mbszveW5e9`
+                                                    </p>
                                                 </p>
                                                 
                                                 <p>
-                                                    USDT (TRC20): `TNauqXWinpVRvZyMjwPTm4JWgncR6FXsMx`
+                                                    <b>USDT (TRC20):</b>
+                                                    <p>
+                                                        `TNauqXWinpVRvZyMjwPTm4JWgncR6FXsMx`
+                                                    </p>
                                                 </p>
                                             </p>
                                             <p>
