--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
                                             </p>
                                             <p>
                                                 <p>
-                                                    Want a shoutout? Send your donation screenshot to `unluckygrandpa@gmail.com`.
+                                                    <b>Want a shoutout?</b> Send your donation screenshot to `unluckygrandpa@gmail.com`.
                                                 </p>
                                                 
                                                 <p>
-                                                    Our Gaming Setup Specifications:
+                                                    <b>Our Gaming Setup Specifications:</b>
                                                 </p>
                                                 <ul>
                                                     <li>CPU: Intel Core i5-9400F</li>
