--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
                                                 <p>
                                                     <b>Bitcoin:</b>
                                                     <p>
-                                                        `1K7zZegsEFTGU1dirhwyikq1mbszveW5e9`
+                                                        1K7zZegsEFTGU1dirhwyikq1mbszveW5e9
                                                     </p>
                                                 </p>
                                                 
                                                 <p>
                                                     <b>USDT (TRC20):</b>
                                                     <p>
-                                                        `TNauqXWinpVRvZyMjwPTm4JWgncR6FXsMx`
+                                                        TNauqXWinpVRvZyMjwPTm4JWgncR6FXsMx
                                                     </p>
                                                 </p>
                                             </p>
@@ -104,7 +104,8 @@
                                                     <li>Resolution: 2K with 180 FPS</li>
                                                     <li>Storage: 2TB Samsung SSD</li>
                                                 </ul>
-                                                
+
+                                                <br />
                                                 <p>
                                                     Thank you for powering up our gaming journey! 🌟
                                                 </p>
