--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
                                                 <p>
                                                     <b>Bitcoin:</b>
                                                     <p>
-                                                        1K7zZegsEFTGU1dirhwyikq1mbszveW5e9
+                                                        <mark style="background-color: #1bfc06; color: black;">1K7zZegsEFTGU1dirhwyikq1mbszveW5e9</mark>
                                                     </p>
                                                 </p>
                                                 
                                                 <p>
                                                     <b>USDT (TRC20):</b>
                                                     <p>
-                                                        TNauqXWinpVRvZyMjwPTm4JWgncR6FXsMx
+                                                        <mark style="background-color: #1bfc06; color: black;">TNauqXWinpVRvZyMjwPTm4JWgncR6FXsMx</mark>
                                                     </p>
                                                 </p>
                                             </p>
