--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                             </p>
                                             <p>
                                                 <p>
-                                                    <b>Want a shoutout?</b> Send your donation screenshot to `unluckygrandpa@gmail.com`.
+                                                    <b>Want a shoutout?</b> Send your donation screenshot to unluckygrandpa@gmail.com.
                                                 </p>
                                                 
                                                 <p>
